--- a/app/views/application/home_page.html.erb
+++ b/app/views/application/home_page.html.erb
@@ -38,14 +38,13 @@
   <div class="div2"></div>
 <div class="div5 d-flex align-items-center justify-content-center mt-3">
   <div class="quote-container-desktop w-100">
-  <blockquote class="quote-box  line-height-16">
-    <p class="quotation-mark line-height-16">
+  <blockquote class="quote-box bg-opaque">
+    <p class="quotation-mark">
       “
     </p>
     <h4 class="quote-text  line-height-16">
       <%= t ".quote" %>
     </h4>
-    <hr>
     <div class="blog-post-actions">
       <p class="blog-post-bottom pull-left writer">
         <%= t ".writer" %>
@@ -56,18 +55,18 @@
 </div>
 <div class="div3 d-flex align-items-center justify-content-center">
   <!-- <div class="shadow p-3 rounded-lg bg-light"> -->
-    <button type="button" name="button" class="btn btn-success h-25 w-75"  data-toggle="modal" data-target="#startModal"><h3 class="text-center"><%= t ".new_game" %></h3"></button>
+    <button type="button" name="button" class="btn btn-info h-25 w-75"  data-toggle="modal" data-target="#startModal"><h3 class="text-center"><%= t ".new_game" %></h3"></button>
   <!-- </div> -->
   </div>
   <div class="div6 d-flex flex-column align-items-center">
-    <div class="d-flex flex-column align-items-center h-50">
-      <%= image_tag "fenix.svg", class: "w-50 mt-5" %>
-      <h1 class="w-100 text-center"><%= t ".title" %></h1>
+    <div class="d-flex flex-column align-items-center ah-50">
+      <%= image_tag "fenix.svg", class: "w-75 mt-5" %>
+      <h1 class="w-100 text-center text-white "><%= t ".title" %></h1>
     </div>
 
   </div>
   <div class="div4 d-flex align-items-center justify-content-center">
-    <button class="btn btn-outline-secondary h-25 w-75" type="button" name="button"  data-toggle="modal" data-target="#instructionsModal"><h3 class="text-center"><%= t ".instructions" %></h3"></button>
+    <button class="btn btn-outline-info h-25 w-75 border-medium" type="button" name="button"  data-toggle="modal" data-target="#instructionsModal"><h3 class="text-center"><%= t ".instructions" %></h3"></button>
   </div>
 </div>
 <!-- Modal -->
@@ -104,14 +103,14 @@
 <div class="modal fade" id="startModal" tabindex="-1" role="dialog" aria-labelledby="startModalLabel" aria-hidden="true">
     <div class="absolute-center modal-dialog w-25 h-25" role="document">
       <div class="modal-content w-100 h-100">
-        <div class="modal-body w-100 h-100 d-flex  align-items-center justify-content-center">
+        <div class="modal-body w-100 h-100 d-flex flex-column align-items-center justify-content-center">
           <%= form_with(url: ministers_path, method: "get", local: true) do %>
-          <h2><%= label_tag(:game, I18n.t("application.home_page.players"), class:"mb-0") %></h2>
-          <p class="mb-2"><%= t('.minister_count', count: Minister.count) %></p>
-          <%= text_field_tag(:game, nil, class: "w-100 form-control") %> <br>
-          <%= submit_tag I18n.t("application.home_page.new_game"), class: "btn btn-success mt-1 float-left" %>
+            <h2><%= label_tag(:game, I18n.t("application.home_page.players"), class:"mb-0") %></h2>
+            <p class="mb-2"><%= t('.minister_count', count: Minister.count) %></p>
+            <%= text_field_tag(:game, nil, class: "w-100 form-control") %> <br>
+            <p id="notice"><%= notice if params[:error]%></p>
+            <%= submit_tag I18n.t("application.home_page.new_game"), class: "btn btn-success mt-1 float-left" %>
           <% end %>
-          <p id="notice"><%= notice if params[:error]%></p>
         </div>
       </div>
     </div>
