--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -268,7 +268,7 @@ blockquote{
 }
 
 .bg-image{
-	background-image: url(pollution.webp);
+	background-image: asset_url('pollution.webp');
 	background-repeat: no-repeat, no-repeat;
 	background-position: center;
 	background-size: cover;
